# yankee

./: .bumpversion.cfg  .gitignore  OUTLINE.md  README.md  pyproject.toml  setup.py
docs/: api.md  conf.py  index.md  motivation.md  user_guide.md
docs/api/: base.md  data.md  html.md  json.md  xml.md
docs/user_guide/: fields.md  introduction.md  json_handling.md  output.md  schemas.md  xml_html_handling.md
gelatin_extract/base/: deserializer.py  fields.py  schema.py
gelatin_extract/io/test/: test_iterparse.py
gelatin_extract/json/schema/: fields.py  key.py  schema.py
gelatin_extract/xml/io/: aps.py  autodetect.py  autodetect_test.py  iterparse.py  sample.py
gelatin_extract/xml/schema/: fields.py  key.py  schema.py  test_schema.py
sugar/: util.py
sugar/base/: fields.py
sugar/io/: __init__.py  iterparse.py
sugar/json/schema/: __init__.py  fields.py  key.py  schema.py  test_schema.py
sugar/xml/io/: process.py
sugar/xml/schema/: fields.py  key.py  schema.py  test_schema.py
yankee/: __init__.py  settings.py  util.py
yankee/base/: __init__.py  accessor.py  deserializer.py  fields.py  fields_test.py  schema.py  schema_test.py  test_schema.py
yankee/base/fixtures/: model.py  schema.py
yankee/codegen/: dataclass_gen.py  dataclass_gen_test.py
yankee/data/: __init__.py  attrdict.py  collection.py  collection_test.py  row.py  util.py
yankee/html/: util.py
yankee/html/io/: aps.py  autodetect.py  autodetect_test.py  iterparse_test.py
yankee/html/schema/: __init__.py  accessor.py  fields.py  mixin.py  schema.py  test_schema.py
yankee/io/: __init__.py  convert.py  iterparse.py
yankee/io/test/: sample.txt  test_iterparse.py
yankee/json/: __init__.py
yankee/json/schema/: __init__.py  accessor.py  fields.py  key.py  mixin.py  schema.py  test_schema.py
yankee/xml/: __init__.py
yankee/xml/fixtures/: exchange-documents.xsd
yankee/xml/io/: aps_test.py  iterparse.py  iterparse_test.py  process.py  sample.py
yankee/xml/schema/: __init__.py  accessor.py  fields.py  key.py  mixin.py  schema.py  test_schema.py
