[tool.poetry]
name = "yankee"
version = "0.1.45"
description = "lightweight, simple, and fast declarative XML and JSON data extraction"
authors = ["Parker Hancock <633163+parkerhancock@users.noreply.github.com>"]
license = "Apache Software License 2.0"
readme = "README.md"
repository = "https://github.com/parkerhancock/gelatin_extract"
keywords = ["deserialization", "xml", "json", "deserialize"]
classifiers =[
    "Development Status :: 3 - Alpha",
    "Topic :: Text Processing :: Markup :: XML"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
lxml = "^5.2.2"
python-dateutil = "^2.9.0.post0"
jsonpath-ng = "^1.6.1"
ujson = "^5.10.0"
cssselect = "^1.2.0"
toolz = "^0.12.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
# Documentation Dependencies
furo                       = {optional=true, version="^2022.6"}
linkify-it-py              = {optional=true, version="^2.0"}
myst-parser                = {optional=true, version=">=0.17"}
sphinx                     = {optional=true, version="^5.0.2"}
sphinx-autodoc-typehints   = {optional=true, version="^1.19"}
sphinx-automodapi          = {optional=true, version=">=0.14"}
sphinx-copybutton          = {optional=true, version=">=0.5"}
sphinx-design              = {optional=true, version=">=0.2"}
sphinx-notfound-page       = {optional=true, version=">=0.8"}
sphinxcontrib-apidoc       = {optional=true, version="^0.3"}
sphinxcontrib-mermaid      = {optional=true, version="^0.7.1"}
nbsphinx                   = {optional=true, version="^0.8.9"}
IPython                    = {optional=true, version="^7.17.0"}
inflection = "^0.5.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.1"
ipykernel = "^6.26.0"
pandas = "^2.1.2"
pytest = "^7.1.2"
keyring = "^23.5.1"
black = "^22.3.0"
isort = "^5.10.1"

# For convenience in local development
nox                   = "^2022.1.7"
nox-poetry            = "^1.0.0"
rich                  = ">=10.0"
sphinx-autobuild      = "^2021.3.14"
pytest-recording = "^0.12.1"
bump2version = "^1.0.1"

[scripts]
test = "pytest --basetemp=tmp"
render_docs = "make -f docs/Makefile html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
